--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,11 @@
     font-weight: 700;
 cursor: pointer;
 }
+span{
+    color: #FF5400;
+    font-size: 32px;
+    font-weight: 800;
+}
 .title{
     color: #131318;
     font-size: 40px;
@@ -25,7 +30,36 @@ cursor: pointer;
     font-size: 16px;
     font-weight: 400;
 }
+/* nav start */
+nav
+{
+    padding: 0px 130px;
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+.logo{
+    display: flex;
+    gap:15px
+}
+.logo .title{
+    font-size: 32px;
+}
+.logo-img{
+    width: 50px;
+    height: 55px;
+}
 
+nav ul{
+    display: flex;
+    gap: 45px;
+   
+}
+
+nav li{
+    list-style: none;
+}
+/* nav end */
 /* shared items end */
 
 /* Background & header banner start */
@@ -34,6 +68,7 @@ cursor: pointer;
    background-repeat: no-repeat;
    width: 1170px;
    height: 500px;
+   margin-top: 50px;
    margin: 100px ;
    border-radius: 16px;
    
@@ -131,6 +166,11 @@ main{
 
 /* about start */
 
+.why-choose-us{
+    margin-top: 115px ;
+    margin-bottom: 115px;
+
+}
 .about{
 text-align: center;
 }
@@ -166,10 +206,6 @@ text-align: center;
     font-size: 16px;
 
 }
-
-
-
-
 .container-1st-part{
     display: flex;
     flex-direction: row;
@@ -184,8 +220,94 @@ text-align: center;
 }
 /* about end */
 
+.newsletter{
+display: flex;
+gap: 25px;
+margin-bottom: 100px;
 
+}
+.newsletter .title{
+    font-size: 24px;
+}
+.newsletter.description{
+    margin-top: 0px;
+    font-size: 16px;
+}
 
+.Subscribe-box{
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    padding: 40px ;
+    width: 475px;
+    height: 420px;
+}
+.enter-your{
+    width: 393px;
+    height: 52px;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    border: 0px;
+    margin-bottom: 15px;
+}
+.Subscribe-box >hr{
+    margin-top: 25px;
+    margin-bottom: 25px;
+    width: 380px;
+    height: 0px;
+}
+.Subscribe-box .primary-button{
+    margin-top: 25px;
+    width: 393px;
+    height: 52px;
+}
+.last-img{
+    width:100%;
+    height: 100%;
+}
+.off-badge{
+    text-align: center;
+    width: 324px;
+    transform: rotate(-19.628deg);
+    border-radius: 16px;
+    padding: 20px 0px;
+    background: #FF5400;
+    position: relative;
+    bottom: 165px;
+    left: 264px;
+
+}
+.end-part .title{
+    color: #FFF;
+    font-size: 32px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+.end-part .description{
+    color: #FFF;
+    font-size: 24px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+.footer{
+    background: rgba(19, 19, 24, 0.05);
+    height: 300px;
+    text-align: center;
+    padding: 110px 335px;
+}
+.footer > hr{
+    margin-top: 75px;
+    margin-bottom: 50px;
+}
+.footer img {
+    margin-top: 35px;
+}
+.footer .title{
+    font-size: 32px;
+}
+
+.footer .description{
+    font-size: 16px;
+}
 
 
  /*media query for mobile */
@@ -275,6 +397,102 @@ text-align: center;
     height: 290px;
     width: 285px;
 }
+.container-1st-part .title {
+    font-size: 20px;
 
+}
+.container-1st-part .description{
+    font-size: 14px;
+}
+.container-2nd-part .title{
+    font-size: 20px;
+
+}
+.container-2nd-part .description{
+    font-size: 14px;
+
+}
+.newsletter{
+    flex-direction: column;
+    justify-content: center;
+}
+.Subscribe-box{
+    width:290px;
+    height:353px;
+    padding: 20px;
+    gap: 10px;
+}
+.enter-your{
+    width: 288px;
+    height: 52px;
+
+}
+.Subscribe-box .primary-button{
+    width: 288px;
+    height: 52px;
+}
+.Subscribe-box >hr{
+    display: flex;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    width: 250px;
+    height: 0px;
+}
+.off-badge{
+    text-align: center;
+    width: 215px;
+    
+    transform: rotate(-19.628deg);
+    border-radius: 16px;
+    padding: 20px 0px;
+    background: #FF5400;
+    position: relative;
+    bottom: 125px;
+    left: 115px;
+}
+.end-part .title{
+    color: #FFF;
+    font-size: 21px;
+}
+.end-part .description{
+    color: #FFF;
+    font-size: 15px;
+    margin-bottom: 0;
+
+}
+.Subscribe-box .primary-button{
+    margin-top: 10px;
+}
+.last-img{
+    width: 335px;
+    height: 300px;
+}
+.footer{
+    background: rgba(19, 19, 24, 0.05);
+    margin-top: 0px;
+    width: 280px;
+    height: 309px;
+    text-align: center;
+    padding: 32px 45px;
+}
+.footer > hr{
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+.footer img {
+    margin-top: 16px;
+}
+nav
+{
+    padding: 0px 20px;
+    margin-top: 20px;
+    flex-direction: column;
+    
+}
+nav ul{
+    margin: 0px;
+    gap: 5px;
+   
+}
 
 }
